# kio-rclone

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Messages.sh  README.md  package.json
.github/workflows/: ci.yml  docs.yml  release.yml
app/: CMakeLists.txt  appid.h  configwindow.cpp  configwindow.h  main.cpp  org.kde.kio-rclone-config.desktop  org.kde.kio-rclone-config.metainfo.xml
autotests/: CMakeLists.txt  fake-rclone.cpp  rclonebackendtest.cpp  rclonedownloadtest.cpp  rclonepausetest.cpp  rcloneuploadtest.cpp  rcloneurltest.cpp
config/: CMakeLists.txt  appid.h  configwindow.cpp  configwindow.h  main.cpp  org.kde.kio-rclone-config.desktop  org.kde.kio-rclone-config.metainfo.xml
desktop/: CMakeLists.txt  rclone-network.desktop
docs/: DISTRIBUTION_PLAN.md  LOGGING.md  TESTING.md  distribution-plan.md  features.md  getting-started.md  google-drive.md  index.md  logging.md  package.json  pnpm-lock.yaml  testing.md  transfers.md  troubleshooting.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: ArchitectureFlow.vue  custom.css  index.ts
docs/en/: LOGGING.md  features.md  getting-started.md  google-drive.md  index.md
docs/es/: features.md  getting-started.md  google-drive.md  index.md  logging.md  transfers.md  troubleshooting.md
docs/public/: robots.txt
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD
po/: kio6_rclone.pot
po/es/: kio6_rclone.po
scripts/: bump-version.sh  update-translations.sh
src/: CMakeLists.txt  rclone.json  rclonebackend.cpp  rclonebackend.h  rcloneentryformat.cpp  rcloneentryformat.h  rcloneprocess.cpp  rcloneprocess.h  rcloneurl.cpp  rcloneurl.h  rcloneworker.cpp  rcloneworker.h
